# market-viewr

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO.md  app.py  clear_cache.py  pyproject.toml  requirements.txt  warm_cache.py  wsgi.py
src/viewr/: __init__.py  config.py
src/viewr/api/: hive_engine.py
src/viewr/routes/: api.py  main.py  pools.py
src/viewr/services/: market.py  pools.py  tokens.py
src/viewr/utils/: errors.py  formatters.py  security.py
static/css/: style.css
static/js/: scripts.js
templates/: base.html  error_404.html  error_500.html  error_generic.html  index.html  lp_detail.html  lp_list.html  market.html  richlist_full.html  view.html
